--- a/css/country.css
+++ b/css/country.css
@@ -1,8 +1,6 @@
 body {
-    background-color: rgba(24, 24, 24, 1);
+    background-color: rgb(24, 24, 24);
     background-image: url(../pics/country_with_label.jpg);
 
     background-repeat:no-repeat;
-    background-position-x: center;
-    background-position-y: 100px;
 }
