Added inner war style

--- a/css/country.css
+++ b/css/country.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background-color: rgb(24, 24, 24);
-    background-image: url(../pics/country_with_label.jpg);
+    background-image: url(../pics/cover_inner_war.jpg);
 
     background-repeat:no-repeat;
     background-size: contain;
