Optimized sizes for mobiles

--- a/css/secret_joint.css
+++ b/css/secret_joint.css
@@ -11,3 +11,29 @@ body {
     margin: auto;
 }
 
+#track_div {
+    width: 80vmin;
+}
+
+#cover {
+    width: 80vmin;
+    display: block;
+    margin: auto;
+}
+
+@media all and (max-device-width: 600px) {
+    #container {
+        height: 95vh;
+        width: 95vw;
+    }
+
+    #track_div {
+        width: 95vw;
+    }
+
+    #cover {
+        width: 95vw;
+        display: block;
+        margin: auto;
+    }
+}
