Optimized sizes for low width sizes

--- a/css/secret_joint.css
+++ b/css/secret_joint.css
@@ -37,3 +37,20 @@ body {
         margin: auto;
     }
 }
+
+@media all and (max-width: 600px) {
+    #container {
+        height: 95vh;
+        width: 95vw;
+    }
+
+    #track_div {
+        width: 95vw;
+    }
+
+    #cover {
+        width: 95vw;
+        display: block;
+        margin: auto;
+    }
+}
