Another size optimization + added footer

--- a/css/secret_joint.css
+++ b/css/secret_joint.css
@@ -3,8 +3,7 @@ body {
 }
 
 #container {
-    height: 80vh;
-    width: 80vw;
+    width: 70vmin;
 }
 
 .center {
@@ -12,27 +11,26 @@ body {
 }
 
 #track_div {
-    width: 80vmin;
+    width: 70vmin;
 }
 
 #cover {
-    width: 80vmin;
+    width: 70vmin;
     display: block;
     margin: auto;
 }
 
 @media all and (max-device-width: 600px) {
     #container {
-        height: 95vh;
-        width: 95vw;
+        width: 95vmin;
     }
 
     #track_div {
-        width: 95vw;
+        width: 95vmin;
     }
 
     #cover {
-        width: 95vw;
+        width: 95vmin;
         display: block;
         margin: auto;
     }
@@ -40,17 +38,21 @@ body {
 
 @media all and (max-width: 600px) {
     #container {
-        height: 95vh;
-        width: 95vw;
+        width: 95vmin;
     }
 
     #track_div {
-        width: 95vw;
+        width: 95vmin;
     }
 
     #cover {
-        width: 95vw;
+        width: 95vmin;
         display: block;
         margin: auto;
     }
+}
+
+@font-face {
+    font-family: commonFont;
+    src: url(../fonts/Quicksand-Regular.woff) format('woff')
 }
