--- a/css/secret_joint.css
+++ b/css/secret_joint.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(3, 3, 3);
 }
 
-#container {
+.container {
     width: 70vmin;
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 @media all and (max-device-width: 600px) {
-    #container {
+    .container {
         width: 95vmin;
     }
 
@@ -37,7 +37,7 @@ body {
 }
 
 @media all and (max-width: 600px) {
-    #container {
+    .container {
         width: 95vmin;
     }
 
@@ -55,4 +55,34 @@ body {
 @font-face {
     font-family: commonFont;
     src: url(../fonts/Quicksand-Regular.woff) format('woff')
+}
+
+#youtube_logo {
+    -o-transform: scale(0.7, 0.7);
+    -ms-transform: scale(0.7, 0.7);
+    -moz-transform: scale(0.7, 0.7);
+    -webkit-transform: scale(0.7, 0.7);
+    transform: scale(0.7, 0.7);
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+#youtube_logo :hover {
+    -o-transform: scale(1.3, 1.3);
+    -ms-transform: scale(1.3, 1.3);
+    -moz-transform: scale(1.3, 1.3);
+    -webkit-transform: scale(1.3, 1.3);
+    transform: scale(1.3, 1.3);
+
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.fb__1 {
+    display: flex;
+    justify-content: center;
 }
