--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,88 @@
-
 body {
-    background: -moz-linear-gradient(right,  rgba(170, 119, 248, 0.5) 0%, rgba(255, 255, 255, 0) 100%), url("../pics/cover_nameless_long.jpg") 0% 90%; /* FF3.6-15 */
-    background: -webkit-linear-gradient(right,  rgba(170, 119, 248, 0.5) 0%, rgba(255, 255, 255, 0) 100%), url("../pics/cover_nameless_long.jpg") 0% 90%; /* Chrome10-25,Safari5.1-6 */
+    background-color: rgb(3, 3, 3);
+}
 
-    background: linear-gradient(to right,  rgba(170, 119, 248, 0.5) 0%, rgba(255, 255, 255, 0) 100%), url("../pics/cover_nameless_long.jpg") 0% 90%; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
+.container {
+    width: 70vmin;
+}
+
+.center {
+    margin: auto;
+}
+
+#track_div {
+    width: 70vmin;
+}
+
+#cover {
+    width: 70vmin;
+    display: block;
+    margin: auto;
+}
+
+@media all and (max-device-width: 600px) {
+    .container {
+        width: 95vmin;
+    }
+
+    #track_div {
+        width: 95vmin;
+    }
+
+    #cover {
+        width: 95vmin;
+        display: block;
+        margin: auto;
+    }
+}
+
+@media all and (max-width: 600px) {
+    .container {
+        width: 95vmin;
+    }
+
+    #track_div {
+        width: 95vmin;
+    }
+
+    #cover {
+        width: 95vmin;
+        display: block;
+        margin: auto;
+    }
+}
+
+@font-face {
+    font-family: commonFont;
+    src: url(../fonts/Quicksand-Regular.woff) format('woff')
+}
+
+#youtube_logo {
+    -o-transform: scale(0.7, 0.7);
+    -ms-transform: scale(0.7, 0.7);
+    -moz-transform: scale(0.7, 0.7);
+    -webkit-transform: scale(0.7, 0.7);
+    transform: scale(0.7, 0.7);
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+#youtube_logo :hover {
+    -o-transform: scale(1.3, 1.3);
+    -ms-transform: scale(1.3, 1.3);
+    -moz-transform: scale(1.3, 1.3);
+    -webkit-transform: scale(1.3, 1.3);
+    transform: scale(1.3, 1.3);
+
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.fb__1 {
+    display: flex;
+    justify-content: center;
 }
