Improve Chrome audit

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ body {
 
 @font-face {
     font-family: commonFont;
+    font-display: auto;
     src: url(../fonts/Quicksand-Regular.woff) format('woff')
 }
 
